# ComfyUI-IF_VideoPrompts

./: IF_VideoPromptsNode.py  LICENSE.md  README.md  __init__.py  compatibility.txt  install.bat  install.py  project.toml  pyproject.toml  requirements.txt
WF/: CD_IF_VideoPrompts.json  IF_VideoPrompt.json
example_workflows/: CD_WAN_VACE.json
presets/: neg_prompts.json  profiles.json
web/js/: IF_VideoPromptsNode.js
