[project]
name = "comfyui-if_videoprompts"
description = "ComfyUI extension for video-based prompting and processing with support for various models and video processing capabilities"
version = "0.1.5"
license = { file = "MIT License" }
dependencies = [
    "torch>=2.0.0",
    "transformers",
    "accelerate",
    "huggingface_hub>=0.26.0",
    "pillow>=9.5.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "decord>=0.6.0",
    "ffmpeg-python",
    "imageio_ffmpeg>=0.6.0",
    "moviepy>=2.1.2",
    "tokenizers>=0.15.0",
    "safetensors>=0.3.1",
    "autoawq==0.2.8",
    "tqdm>=4.65.0",
    "psutil>=5.9.5",
    "packaging>=23.1",
]

[project.optional-dependencies]
    # triton for linux
    'triton; sys_platform == "linux"',
    # triton for windows
    'https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post8/triton-3.1.0-cp312-cp312-win_amd64.whl; sys_platform == "win64" and (python_version >= "3.12" and python_version < "3.13")',
    'https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post8/triton-3.1.0-cp311-cp311-win_amd64.whl; sys_platform == "win64" and (python_version >= "3.11" and python_version < "3.12")',
    'https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post8/triton-3.1.0-cp310-cp310-win_amd64.whl; sys_platform == "win64" and (python_version >= "3.10" and python_version < "3.11")',
    'https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post8/triton-3.1.0-cp38-cp38-win_amd64.whl; sys_platform == "win64" and (python_version >= "3.8" and python_version < "3.9")',

#flash-attn = ["flash-attn>=2.0.0"]

[project.urls]
Repository = "https://github.com/if-ai/ComfyUI-IF_VideoPrompts"

# Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "impactframes"
DisplayName = "IF_VideoPrompts"
Icon = "https://impactframes.ai/System/Icons/48x48/if.png"

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

# Note regarding flash-attn:
# The flash-attn dependency is moved to optional-dependencies as it's 
# not compatible with MacOS (Darwin) systems
